--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><head><title>Image Export Update site</title><head>
 <body>
-This is the <a href="http://https://github.com/veger/eclipse-gef-imageexport">Eclipse GEF Image Export plugin</a> update site. Add it to the available update sites of Eclipse to install the plugins
+This is the <a href="http://github.com/veger/eclipse-gef-imageexport">Eclipse GEF Image Export plugin</a> update site. Add it to the available update sites of Eclipse to install the plugins
 </body></html>
